Bug 263110 - More intuitive folder selection while navigating back to subfolder
Summary: More intuitive folder selection while navigating back to subfolder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: columns mode (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: investigated
Depends on:
Blocks:
 
Reported: 2011-01-14 08:57 UTC by Kevin Bader
Modified: 2011-05-28 01:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Bader 2011-01-14 08:57:08 UTC
Version:           unspecified (using KDE 4.5.4) 
OS:                Linux

When using the arrow keys in columns view mode, the behaviour is not quite intuitive. When going deeper into the filesystem using the right arrow key and back again, using the left arrow key, I would expect to get in the same folder I just were using the right arrow key again. Instead I end up in another folder - the first one on the list - instead in the visible folder you just were before.

Sorry for my bad English. I will explain in other words if this helps.

Reproducible: Always

Steps to Reproduce:
select a folder which has at least two subfolders -> press right arrow key -> select a folder other than the first -> press right arrow key -> press left arrow key twice (you can still see all three folders, you would expect to end up in the folder visible by pressing the right arrow key twice) -> press right arrow key twice

Actual Results:  
you end up in another folder

Expected Results:  
ending up in the same folder again
Comment 1 Peter Penz 2011-01-14 21:06:05 UTC
Thanks for the report, I could reproduce the issue.

(internal hint: Respect the active index when setting the active directory)
Comment 2 Matthias Fuchs 2011-05-28 01:11:12 UTC
Git commit 7e6fd6fba45eed0560708413802f2344c79c2e56 by Matthias Fuchs.
Committed on 27/05/2011 at 18:00.
Pushed by mfuchs into branch 'master'.

DolphinColumnView navigation works more intuitively.

If no item is selected then pressing right moves to a column view with child url, instead of the first index.
BUG:263110
REVIEW:101449

M  +10   -1    dolphin/src/views/dolphincolumnview.cpp     
M  +3    -1    dolphin/src/views/dolphincolumnview.h     

http://commits.kde.org/kde-baseapps/7e6fd6fba45eed0560708413802f2344c79c2e56
Comment 3 Matthias Fuchs 2011-05-28 01:13:11 UTC
Git commit 30011f6985c2945b0d9c1b93a90d5e70551e0b2b by Matthias Fuchs.
Committed on 27/05/2011 at 18:00.
Pushed by mfuchs into branch 'KDE/4.6'.

Backport
DolphinColumnView navigation works more intuitively.

If no item is selected then pressing right moves to a column view with child url, instead of the first index.
CCBUG:263110
REVIEW:101449
(cherry picked from commit 7e6fd6fba45eed0560708413802f2344c79c2e56)

M  +10   -1    dolphin/src/views/dolphincolumnview.cpp     
M  +3    -1    dolphin/src/views/dolphincolumnview.h     

http://commits.kde.org/kde-baseapps/30011f6985c2945b0d9c1b93a90d5e70551e0b2b