DolphinColumnView navigation works more intuitively.

If no item is selected then pressing right moves to a column view with child url, instead of the first index.
BUG:263110
REVIEW:101449